--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 azure-functions>=1.18.0,<2.0.0
-azure-cosmos>=4.5.0,<5.0.0
-fastapi>=0.104.0,<1.0.0
-uvicorn[standard]>=0.24.0,<0.25.0
+azure-data-tables>=12.4.0,<13.0.0
+pydantic>=2.0.0,<3.0.0
