Add features: local testing, Azure deployment automation, alert filtering/search
- LOCAL_TESTING.md: Comprehensive local dev guide with troubleshooting
- setup-local.sh: Automated local environment setup script
- deploy-azure.sh: One-command Azure deployment script (CosmosDB, Functions, SWA)
- Enhanced AlertsDashboard: Filter by type, severity, search location
- Updated requirements.txt with azure-cosmos and pyjwt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 azure-functions>=1.18.0,<2.0.0
+azure-cosmos>=4.5.0,<5.0.0
 azure-data-tables>=12.4.0,<13.0.0
+pyjwt>=2.8.0,<3.0.0
 pydantic>=2.0.0,<3.0.0
